# yag2002-svn

tags/VRC-v1.0.0/: YAF3D.pc.in  configure.ac
tags/VRC-v1.0.0/src/framework/: Makefile.am  application.cpp  gamestate.cpp  guirenderer.h  log.h
tags/VRC-v1.0.0/src/gamecode/gui/: vrc_dialoglevelselect.cpp  vrc_intro.cpp  vrc_intro.h
tags/VRC-v1.0.0/src/gamecode/physics/: vrc_physicsbase.cpp  vrc_physicsbox.cpp
tags/VRC-v1.0.0/src/gamecode/player/: vrc_inputhandler.inl  vrc_player.h  vrc_playersound.h
tags/VRC-v1.0.0/src/gamecode/visuals/: vrc_candle.cpp  vrc_mesh.h
tags/VRC-v1.0.1/src/gamecode/: Makefile.am  vrc_gameutils.cpp  vrc_gameutils.h
tags/VRC-v1.0.1/src/gamecode/gui/: vrc_dialogplayercfg.cpp  vrc_dialogsettings.cpp
tags/VRC-v1.0.1/src/gamecode/physics/: vrc_physicscylinder.cpp
tags/VRC-v1.0.1/src/gamecode/player/: vrc_inputhandler.cpp  vrc_playeranim.h  vrc_playerimpl.cpp  vrc_playerimplclient.h  vrc_playerimplstandalone.cpp  vrc_playernamedisp.cpp  vrc_playernetworking.cpp  vrc_playernetworking.h  vrc_playerphysics.h
tags/VRC-v1.0.1/src/gamecode/sound/: vrc_3dsound.cpp  vrc_ambientsound.h
tags/VRC-v1.0.1/src/gamecode/tools/: vrc_inspector.cpp
tags/VRC-v1.0.1/src/gamecode/visuals/: vrc_camera.h  vrc_fog.h  vrc_observer.h  vrc_pointlight.cpp  vrc_pointlight.h  vrc_water.cpp
trunk/ctd/src/framework/: ChangeLog  Makefile.am  application.cpp  attributemanager.cpp  attributemanager.h  attributemanager.inl  baseentity.cpp  baseentity.h  configuration.cpp  configuration.h  ctd_application.cpp  ctd_application.h  ctd_attributemanager.cpp  ctd_attributemanager.h  ctd_attributemanager.inl  ctd_base.h  ctd_baseentity.cpp  ctd_baseentity.h  ctd_baseentity.inl  ctd_configuration.cpp  ctd_configuration.h  ctd_entitymanager.cpp  ctd_entitymanager.h  ctd_gamestate.cpp  ctd_gamestate.h  ctd_guimanager.cpp  ctd_guimanager.h  ctd_guimsgbox.cpp  ctd_guimsgbox.h  ctd_guirenderer.cpp  ctd_guirenderer.h  ctd_guitexture.cpp  ctd_guitexture.h  ctd_keymap.cpp  ctd_keymap.h  ctd_levelmanager.cpp  ctd_levelmanager.h  ctd_log.cpp  ctd_log.h  ctd_network.cpp  (+37 more)
trunk/ctd/src/framework/ctdtinyxml/: tinystr.cpp  tinyxmlparser.cpp
trunk/ctd/src/framework/yaf3dtinyxml/: tinystr.cpp  tinystr.h  tinyxml.cpp
trunk/yag2002/: Makefile.am  configure.ac
trunk/yag2002/doc/: vrc-features.mm
trunk/yag2002/src/framework/: ChangeLog  Makefile.am  application.cpp  application.h  application.inl  attributemanager.cpp  attributemanager.h  attributemanager.inl  base.cpp  base.h  baseentity.cpp  baseentity.h  baseentity.inl  configuration.cpp  configuration.h  ctd_baseentity.cpp  ctd_configuration.h  ctd_entitymanager.h  ctd_gamestate.h  ctd_guimanager.h  ctd_guimsgbox.cpp  ctd_guimsgbox.h  ctd_network_defs.h  ctd_physics.cpp  entitymanager.cpp  entitymanager.h  filesystem.cpp  filesystem.h  gamestate.cpp  gamestate.h  guimanager.cpp  guimanager.h  guimsgbox.cpp  guimsgbox.h  guirenderer.cpp  guirenderer.h  guitexture.cpp  guitexture.h  keymap.cpp  keymap.h  (+32 more)
trunk/yag2002/src/framework/ctdtinyxml/: tinyxml.h  tinyxmlparser.cpp
trunk/yag2002/src/framework/yaf3dtinyxml/: tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
trunk/yag2002/src/gamecode/: Makefile.am  ctd_exceptionlogger.h  ctd_gameutils.cpp  ctd_main.cpp  vrc_config.h  vrc_exceptionlogger.cpp  vrc_exceptionlogger.h  vrc_gameutils.cpp  vrc_gameutils.h  vrc_main.cpp  vrc_main.h  vrc_shadowmanager.cpp  vrc_shadowmanager.h
trunk/yag2002/src/gamecode/gamelogic/: vrc_gamelogic.cpp  vrc_gamelogic.h  vrc_logicscript.cpp  vrc_logicscript.h  vrc_story.cpp  vrc_story.h  vrc_storyactor.cpp  vrc_storyactor.h  vrc_storydialog.cpp  vrc_storydialog.h  vrc_storyengine.cpp  vrc_storyengine.h  vrc_storyevent.cpp  vrc_storyevent.h  vrc_storynetworking.cpp  vrc_storynetworking.h  vrc_storysystem.cpp  vrc_storysystem.h
trunk/yag2002/src/gamecode/gui/: ctd_dialoglevelselect.cpp  ctd_dialogplayercfg.h  vrc_dialoglevelselect.cpp  vrc_dialoglevelselect.h  vrc_dialoglogin.cpp  vrc_dialoglogin.h  vrc_dialogplayercfg.cpp  vrc_dialogplayercfg.h  vrc_dialogsettings.cpp  vrc_dialogsettings.h  vrc_intro.cpp  vrc_intro.h  vrc_mapview.cpp  vrc_mapview.h  vrc_menu.cpp  vrc_menu.h  vrc_microinput.cpp  vrc_microinput.h
trunk/yag2002/src/gamecode/maintenance/: vrc_networknotification.cpp  vrc_networknotification.h  vrc_updatenotifier.cpp  vrc_updatenotifier.h
trunk/yag2002/src/gamecode/networking/: _Def_replicaregs.cpp
trunk/yag2002/src/gamecode/objects/: vrc_baseobject.cpp  vrc_baseobject.h  vrc_objectnetworking.cpp  vrc_objectnetworking.h  vrc_objwood.cpp  vrc_objwood.h
trunk/yag2002/src/gamecode/physics/: ctd_geomemitter.h  ctd_physicsbase.cpp  ctd_physicsbox.h  ctd_physicscylinder.cpp  ctd_physicssphere.cpp  vrc_geomemitter.cpp  vrc_geomemitter.h  vrc_physicsbase.cpp  vrc_physicsbase.h  vrc_physicsbase.inl  vrc_physicsbox.cpp  vrc_physicsbox.h  vrc_physicscylinder.cpp  vrc_physicscylinder.h  vrc_physicssphere.cpp  vrc_physicssphere.h
trunk/yag2002/src/gamecode/platform/: ctd_platform.h  vrc_platform.cpp  vrc_platform.h
trunk/yag2002/src/gamecode/player/: ctd_chatgui.cpp  ctd_inputhandler.inl  ctd_playeranim.cpp  ctd_playerimpl.cpp  ctd_playerimplclient.cpp  ctd_playerimplserver.h  ctd_playernetworking.cpp  ctd_playernetworking.h  ctd_playerphysics.cpp  ctd_playerphysics.h  ctd_playersound.cpp  ctd_playersound.h  vrc_inputhandler.cpp  vrc_inputhandler.h  vrc_inputhandler.inl  vrc_player.cpp  vrc_player.h  vrc_playeranim.cpp  vrc_playeranim.h  vrc_playerimpl.cpp  vrc_playerimpl.h  vrc_playerimplclient.cpp  vrc_playerimplclient.h  vrc_playerimplserver.cpp  vrc_playerimplserver.h  vrc_playerimplstandalone.cpp  vrc_playerimplstandalone.h  vrc_playernamedisp.cpp  vrc_playernamedisp.h  vrc_playernetworking.cpp  vrc_playernetworking.h  vrc_playerphysics.cpp  vrc_playerphysics.h  vrc_playerpicker.cpp  vrc_playerpicker.h  vrc_playersound.cpp  vrc_playersound.h  vrc_spawnpoint.cpp  vrc_spawnpoint.h
trunk/yag2002/src/gamecode/scripting/: vrc_script.cpp  vrc_script.h  vrc_script.inl  vrc_scriptconsole.cpp  vrc_scriptconsole.h  vrc_scripteditor.cpp  (+3 more)
(+1511 files in other folders)
